# sec-gazette

./: .env.example  .gitignore  CLAUDE.MD  CLAUDE_INSTRUCTIONS.md  PROJECT_SUMMARY.md  README.md  _quarto.yml  config.yaml  index.qmd  pyproject.toml
docs/: index.html  search.json
docs/notebooks/: sec_digest_dashboard.html
notebooks/: sec_digest_dashboard.qmd
scripts/: 01_scrape_and_download.py  02_parse_pdfs.py  03_test_extraction.py  04_batch_extract.py  05_load_to_duckdb.py  explore_archive.py  explore_archive2.py  test_direct_access.py  test_fetch.py  test_parser.py  test_single.py
src/sec_digest/: __init__.py  config.py  extractor.py  parser.py  schemas.py  scraper.py
tests/: __init__.py
